[package]
name = "octgn"
version = "0.1.0"
authors = ["Damien Bihel <biheldamien@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-xml-rs = "0.3.1"
serde = {version="1.0", features= ["derive"]}
bitvec = "0.15"